--- a/src/assets/sass/nav/nav.scss
+++ b/src/assets/sass/nav/nav.scss
@@ -1,16 +1,18 @@
 a {
-    text-decoration: none;
-    color: black;
-    font-weight: bolder;
-  
-  }
-  
-  #homeBtn {
-    font-weight: bold;
-  
-  }
-  
-  nav {
-    background-color: #E0F4FF !important;
-    z-index: 100;
-  }
+  text-decoration: none;
+  color: black;
+  font-weight: bolder;
+
+}
+
+#homeBtn {
+  font-weight: bold;
+
+}
+
+nav {
+  background-color: #E0F4FF !important;
+  z-index: 100;
+  width: 100vw;
+  position: absolute;
+}
