--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,3 +3,8 @@
     border: 1px solid #51abf3;
     color: #000000;
 }
+.cancelBtn{
+    border: 3px solid #51abf3;
+    background-color: #fff;
+    color: black;
+}
