--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,9 +2,17 @@
     background-color: #51abf3;
     border: 1px solid #51abf3;
     color: #000000;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: bold;
 }
 .cancelBtn{
     border: 3px solid #51abf3;
     background-color: #fff;
     color: black;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: bold;
 }
