--- a/src/assets/sass/member/find.scss
+++ b/src/assets/sass/member/find.scss
@@ -1,141 +1,48 @@
-section {
-    padding-top: 70px;
-    width: 80%;
-    max-width: 500px;
-    margin: 0 auto;
-    padding-bottom: 200px;
-  }
+#formBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #FFF;
+  width: 50%;
+  min-width: 463px;
+  max-width: 693px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 20px;
+
+}
+
+#frame {
+  background: no-repeat url("@/assets/images/login/login.png");
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+ 
+label {
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+input[type="password"],
+input[type="text"] {
+  border-radius: 10px;
+  border: 1px solid #333;
+  padding: 10px 20px;
+  font-size: 24px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+.btnBox{
+  display: flex;
   
-  .auth-top {
-    margin-top: 130px;
-    animation: fadein 3s;
-  }
-  
-  .auth-top h2 {
-    font-size: 2.6em;
-    font-weight: 700;
-  }
-  
-  .auth-top h3 {
-    font-size: 1.2em;
-    font-weight: 600;
-    color: #8b95a1;
-    margin-top: 10px;
-  }
-  
-  input:read-only {
-    background-color: #f2f2f2;
-  }
-  
-  #auth-mypage {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
-  
-  #auth-mypage h4 {
-    color: #772cf0;
-    font-size: 0.8em;
-    cursor: pointer;
-  }
-  
-  #auth-form-container {
-    width: 100%;
-    margin-top: 80px;
-    animation: fadein 3s;
-  }
-  
-  .auth-input-box {
-    margin-bottom: 26px;
-  }
-  
-  .input-title {
-    font-size: 1em;
-    font-weight: 600;
-    color: #6f6f6f;
-    margin-bottom: 8px;
-  }
-  
-  .auth-input-box input {
-    width: 100%;
-    border: 1px solid #d9d9d9;
-    border-radius: 6px;
-    padding: 14px;
-    box-sizing: border-box;
-  }
-  
-  .email-box {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .email-box input {
-    width: 45%;
-  }
-  
-  .email-box span {
-    width: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1em;
-  }
-  
-  .region-box {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .region-box #region1,
-  #region2 {
-    border: 1px solid #d9d9d9;
-    border-radius: 6px;
-    padding: 14px;
-    box-sizing: border-box;
-    width: 48%;
-  }
-  
-  .auth-btn-box {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    margin-top: 100px;
-  }
-  
-  .auth-btn-box input {
-    background-color: #772cf0;
-    border: none;
-    width: 100%;
-    height: 50px;
-    color: #fff;
-    border-radius: 6px;
-    font-weight: 600;
-  }
-  
-  #withdraw-btn {
-    margin: 10px;
-    text-align: center;
-    text-decoration: none;
-    color: #8b95a1;
-    font-size: 0.8em;
-    margin-top: 20px;
-    cursor: pointer;
-  }
-  
-  .id-box {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .id-box input[type="text"] {
-    width: 80%;
-  }
-  
-  .id-box input[type="button"] {
-    width: 18%;
-    background-color: #772cf0;
-    color: #fff;
-    border: none;
-  }
+}
+.btnBox>button{
+  margin-left:auto;
+  padding: 10px 30px;
+
+
+}
