--- a/src/assets/sass/tour/map.scss
+++ b/src/assets/sass/tour/map.scss
@@ -17,8 +17,9 @@
 }
 
 .btnBox {
+  width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 0.5fr 1fr;
 }
 
 // .box {
