--- a/src/assets/sass/tour/youtube.scss
+++ b/src/assets/sass/tour/youtube.scss
@@ -1,24 +1,47 @@
-#youtubeBox{
+div,
+input {
+    box-sizing: border-box;
+}
+
+#youtubeBox {
     margin-top: 3em;
     text-align: center;
     padding: 20px 0;
 }
-#btnBox{
+
+#btnBox {
     margin: 3em;
 }
-#videoView{
+
+#videoView {
     display: flex;
     flex-wrap: wrap;
     grid-gap: 20px;
     justify-content: center;
     margin-bottom: 3em;
 }
+
 #videoView>div,
-#videoView>iframe{
+#videoView>iframe {
 
     min-width: 586px;
-    min-height:300px;
+    min-height: 300px;
 }
-iframe{
+
+iframe {
     margin-top: 1.2em;
+}
+
+input {
+    padding: 6px;
+    border: 1px solid black;
+    font-size: 16px;
+    border-radius: 10px 0 0 10px;
+    border-width: 1px 0 1px 1px;
+}
+
+button {
+    font-size: 16px;
+    padding: 6px !important;
+    border-radius: 0 10px 10px 0;
 }
