--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,20 +1,20 @@
 .okBtn {
-    background-color: #51abf3;
-    border: 1px solid #51abf3;
-    color: #000000;
+    background-color: #51abf3 !important;
+    border: 1px solid #51abf3 !important;
+    color: #000000 !important;
     padding: 10px;
     border-radius: 10px;
     font-size: 20px;
     font-weight: bold;
 }
 .okBtn:hover{
-    background-color: #309df6;
+    background-color: #309df6 !important;
 }
 
 .cancelBtn{
-    border: 3px solid #51abf3;
-    background-color: #fff;
-    color: black;
+    border: 3px solid #51abf3 !important;
+    background-color: #fff !important;
+    color: black !important;
     padding: 10px;
     border-radius: 10px;
     font-size: 20px;
