--- a/src/assets/sass/plan/plan.scss
+++ b/src/assets/sass/plan/plan.scss
@@ -8,7 +8,7 @@
     }
     #tourList{
         width: 100%;
-        height: 300px;
+        height: 100%;
         display: flex;
         grid-gap: 1em;
         flex-wrap: nowrap;
@@ -21,11 +21,28 @@
     border-radius: 10px;
     padding: 20px;
     height: 100%;
+    width: 500px;
     .Images{
         img{
-
+            border-radius: 10px;
             max-width: 250px;
             height: auto;
+            margin-bottom: 1em;
         }
     }
+}
+.Btns{
+    display: flex;
+    justify-content: end;
+    grid-gap: 1rem;
+}
+.Btns>button{
+    border-radius: 10px;
+    padding: 6px;
+}
+.removeBtn{
+    background-color: #cd2c2c;
+    border: 1px solid #cd2c2c;
+    font-size: 20px;
+    font-weight: bold;
 }
