feat: 알람기능 구현쥬웅~

--- a/src/assets/sass/nav/nav.scss
+++ b/src/assets/sass/nav/nav.scss
@@ -18,3 +18,60 @@ nav {
   width: 100vw;
 
 }
+#alarmI{
+  margin-top: 7px;
+  cursor: pointer;
+}
+#alarmFrame{
+  position: relative;
+}
+#alarmCnt{
+  display: flex;
+  align-items: center;
+  left: 15px;
+  width: 20px;
+  height: 20px;
+  font-weight: bold;
+  border-radius: 10px;
+  position: absolute;
+  background-color: rgba(255, 162, 0, 0.51);
+  span{
+    text-align: center;
+    text-justify: center;
+    margin: 0 auto;
+    padding: 0;
+  }
+}
+
+#alarmBox{
+  overflow: scroll;
+  position: absolute;
+  right: 30px;
+  border-radius: 40px 10px 20px 20px;
+  top: 35px;
+  width: 320px;
+  padding: 30px;
+  height: 500px;
+  background-color:#EBE3D5;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+
+#alarmBox::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+.status{
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  background-color:#5877e6 ;
+}
+.alarm{
+  cursor: pointer;
+}
+.alarm>p{
+  flex-wrap: nowrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
