--- a/src/assets/sass/member/join.scss
+++ b/src/assets/sass/member/join.scss
@@ -19,6 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100vh;
 }
 
 
@@ -84,29 +85,35 @@ input:focus {
   border-width: 1px 0 1px 1px;
   border-radius: 10px 0px 0px 10px;
 }
-#btnBox{
+
+#btnBox {
   display: flex;
   justify-content: flex-end;
 }
-#btnBox>button{
+
+#btnBox>button {
   margin-left: 20px;
   padding: 10px;
   font-weight: bold;
   border-radius: 10px;
 
 }
-#emailBox>span{
+
+#emailBox>span {
   font-size: 35px;
 }
-#emailBox{
+
+#emailBox {
   display: flex;
 }
+
 .shake {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   transform: translate3d(0, 0, 0);
 }
 
 @keyframes shake {
+
   10%,
   90% {
     transform: translate3d(-1px, 0, 0);
