feat: qna CRUD 구현/ 일반회원, 관리자 분기처리

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,7 +4,7 @@
     color: #000000 !important;
     padding: 6px;
     border-radius: 10px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -18,7 +18,7 @@
     color: black !important;
     padding: 6px;
     border-radius: 10px;
-    font-size: 20px;
+    font-size:18px;
     font-weight: bold;
 }
 
@@ -28,10 +28,13 @@
     border: 1px solid #508D69;
     color: #000000;
     border-radius: 10px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
 }
 
 .addBtn:hover {
     background-color: #3e7655;
+}
+*:focus {
+    outline: 0;
 }
