--- a/src/assets/sass/board/BoardForm.scss
+++ b/src/assets/sass/board/BoardForm.scss
@@ -12,7 +12,7 @@
   }
   
   section {
-    padding-top: 220px;
+    padding-top: 100px;
     width: 80%;
     max-width: 600px;
     margin: 0 auto;
@@ -101,6 +101,19 @@
   
   #btnBox button:nth-child(2) {
     color: #fff;
-    background: #772cf0;
-    border: 1px solid #772cf0;
+    background: #51abf3;
+    border: 1px solid #51abf3;
+  }
+  #imgBox{
+    display: flex;
+    flex-direction: row;
+    height: 450px;
+    width: 100%;
+    grid-gap: 2em;
+    overflow: scroll;
+  }
+
+  img{
+    height: 400px;
+    width: 400px;
   }
