--- a/src/assets/sass/plan/plan.scss
+++ b/src/assets/sass/plan/plan.scss
@@ -2,22 +2,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
     h2{
         font-weight: bold;
         padding-top: 50px;
     }
     #tourList{
+        padding: 20px 40px 80px 40px;
         width: 100%;
         height: 100%;
         display: flex;
-        grid-gap: 1em;
+        grid-gap: 1.8em;
         flex-wrap: nowrap;
         overflow: scroll;
     }
 }
 
 .showPlanFrame{
-    border: 1px solid black;
+
+    border: 1px solid #d3d3d3;
     border-radius: 10px;
     padding: 20px;
     height: 100%;
@@ -25,20 +28,33 @@
     .Images{
         img{
             border-radius: 10px;
-            max-width: 250px;
-            height: auto;
+            width: 250px;
+            height: 180px;
             margin-bottom: 1em;
+            object-fit: cover;
         }
     }
 }
+
+.info {
+    height: 100px;
+    overflow-y: scroll;
+    padding: 10px;
+}
+
 .Btns{
     display: flex;
     justify-content: end;
     grid-gap: 1rem;
+    margin-top: 10px;
 }
+
 .Btns>button{
-    border-radius: 10px;
-    padding: 6px;
+    box-sizing: border-box;
+    border-radius: 6px;
+    padding: 4px 10px;
+    font-size: 0.9em;
+    color: #fff;
 }
 .removeBtn{
     background-color: #cd2c2c;
