--- a/src/assets/sass/member/myPagePlan.scss
+++ b/src/assets/sass/member/myPagePlan.scss
@@ -33,7 +33,7 @@ h3 {
     flex-direction: column;
     transition: transform 0.3s ease-in-out;
     margin-top: 10px;
-
+    overflow: hidden;
     padding: 2em;
     border-radius: 10px;
     // border: 1px solid;
