refactor: 찾기페이지수정

--- a/src/assets/sass/member/find.scss
+++ b/src/assets/sass/member/find.scss
@@ -17,6 +17,7 @@
   background: no-repeat url("@/assets/images/login/login.png");
   background-size: cover;
   display: flex;
+  height: 100vh;
   align-items: center;
   justify-content: center;
 }
